{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 10112,
  "lineage": "27a285ca-bd19-aa83-be69-ef4b40222a6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-05385556ce856cfe1",
            "description": "security group that allows SSh and egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05385556ce856cfe1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Tcp access Rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:loadbalancer/app/my-ecs-lb/d78785715a44f317",
            "arn_suffix": "app/my-ecs-lb/d78785715a44f317",
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-ecs-lb-1662245394.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:loadbalancer/app/my-ecs-lb/d78785715a44f317",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-ecs-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0083ce5953663ebdb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-039e095c4601cffe8"
              },
              {
                "subnet_id": "subnet-05d3c7d7c2d50b5b2"
              }
            ],
            "subnets": [
              "subnet-039e095c4601cffe8",
              "subnet-05d3c7d7c2d50b5b2"
            ],
            "tags": {
              "Name": "philoberry_alb-dev",
              "Service": "philoberry_alb-dev"
            },
            "tags_all": {
              "Name": "philoberry_alb-dev",
              "Service": "philoberry_alb-dev"
            },
            "vpc_id": "vpc-056c1af0371e5c654",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener/app/my-ecs-lb/d78785715a44f317/ec1b46bb00030cdb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener/app/my-ecs-lb/d78785715a44f317/ec1b46bb00030cdb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:loadbalancer/app/my-ecs-lb/d78785715a44f317",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:666897452748:certificate/acd0385b-c144-49f8-8f45-8bf3856fded5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-dev-blue/544cb2e4bcb86dee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:loadbalancer/app/my-ecs-lb/d78785715a44f317",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_security_group.alb",
            "module.ecs-service.aws_lb_target_group.frontend_service_blue",
            "module.route53.aws_acm_certificate.acm",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "express_api_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-express-blue/4aa64c67d8d80d56",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener-rule/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90/48447ff4782b916d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/express/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener-rule/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90/48447ff4782b916d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.https_listener",
            "module.alb.aws_security_group.alb",
            "module.ecs-service.aws_lb_target_group.express_service_blue",
            "module.ecs-service.aws_lb_target_group.frontend_service_blue",
            "module.route53.aws_acm_certificate.acm",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "express_route_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-express-blue/4aa64c67d8d80d56",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener-rule/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90/faf38ba9cec35944",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/routes/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener-rule/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90/faf38ba9cec35944",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener/app/my-ecs-lb/d78785715a44f317/427c92de41d56c90",
            "priority": 101,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.https_listener",
            "module.alb.aws_security_group.alb",
            "module.ecs-service.aws_lb_target_group.express_service_blue",
            "module.ecs-service.aws_lb_target_group.frontend_service_blue",
            "module.route53.aws_acm_certificate.acm",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-0083ce5953663ebdb",
            "description": "my-ecs-lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0083ce5953663ebdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-ecs-lb",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-allow-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 32768,
            "id": "sgrule-2754724979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-043e274252c16a24d",
            "security_group_rule_id": "sgr-0a3119229f4da9dea",
            "self": false,
            "source_security_group_id": "sg-0083ce5953663ebdb",
            "timeouts": null,
            "to_port": 61000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.ecs-cluster.aws_security_group.ecs-cluster-sg",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb-rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-dev-blue/544cb2e4bcb86dee",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener-rule/app/my-ecs-lb/d78785715a44f317/ec1b46bb00030cdb/380bf8628c855b15",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "www.philoberry.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener-rule/app/my-ecs-lb/d78785715a44f317/ec1b46bb00030cdb/380bf8628c855b15",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:listener/app/my-ecs-lb/d78785715a44f317/ec1b46bb00030cdb",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.http_listener",
            "module.alb.aws_security_group.alb",
            "module.ecs-service.aws_lb_target_group.frontend_service_blue",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01e66dacaf1454d",
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:instance/i-045b40248582f807e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045b40248582f807e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "philoberry-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08053f9777e20304b",
            "private_dns": "ip-172-18-2-251.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.18.2.251",
            "public_dns": "ec2-3-35-217-188.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.217.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0583f6dea8b1499d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d3c7d7c2d50b5b2",
            "tags": {
              "Name": "rds-bastion-instance"
            },
            "tags_all": {
              "Name": "rds-bastion-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b34fb82fd445c2cd"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-0b34fb82fd445c2cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b34fb82fd445c2cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_bastion_sg",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-09f46c55466627956",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f46c55466627956",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0083ce5953663ebdb",
                  "sg-0b8280c7bd83b5e85"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "backend-task-sg-dev",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.ecs-cluster.aws_security_group.frontend_task",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-043e274252c16a24d",
            "description": "philoberry-ecs-cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043e274252c16a24d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0083ce5953663ebdb"
                ],
                "self": false,
                "to_port": 61000
              }
            ],
            "name": "philoberry-ecs-cluster",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-0b8280c7bd83b5e85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8280c7bd83b5e85",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0083ce5953663ebdb"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "frontend-task-sg-dev",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2708472978",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-043e274252c16a24d",
            "security_group_rule_id": "sgr-0c5fe4c17c37b9fb3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs-cluster.aws_security_group.ecs-cluster-sg",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "express_service_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-express-blue/4aa64c67d8d80d56",
            "arn_suffix": "targetgroup/philoberry-express-blue/4aa64c67d8d80d56",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-express-blue/4aa64c67d8d80d56",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "philoberry-express-blue",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "philoberry-tg-express",
              "Service": "philoberry-express"
            },
            "tags_all": {
              "Name": "philoberry-tg-express",
              "Service": "philoberry-express"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "express_service_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-express-green/3a3762f1b36690aa",
            "arn_suffix": "targetgroup/philoberry-express-green/3a3762f1b36690aa",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-express-green/3a3762f1b36690aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "philoberry-express-green",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "philoberry-tg-express",
              "Service": "philoberry-express"
            },
            "tags_all": {
              "Name": "philoberry-tg-express",
              "Service": "philoberry-express"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_service_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-dev-blue/544cb2e4bcb86dee",
            "arn_suffix": "targetgroup/philoberry-dev-blue/544cb2e4bcb86dee",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-dev-blue/544cb2e4bcb86dee",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "philoberry-dev-blue",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "philoberry-tg-dev",
              "Service": "philoberry-dev"
            },
            "tags_all": {
              "Name": "philoberry-tg-dev",
              "Service": "philoberry-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_service_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-dev-green/6eb8149cb123b48e",
            "arn_suffix": "targetgroup/philoberry-dev-green/6eb8149cb123b48e",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-dev-green/6eb8149cb123b48e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "philoberry-dev-green",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "philoberry-tg-dev",
              "Service": "philoberry-dev"
            },
            "tags_all": {
              "Name": "philoberry-tg-dev",
              "Service": "philoberry-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs-service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-nginx/cf9c445c0f5cb3d9",
            "arn_suffix": "targetgroup/philoberry-nginx/cf9c445c0f5cb3d9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:666897452748:targetgroup/philoberry-nginx/cf9c445c0f5cb3d9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "philoberry-nginx",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nginx-tg",
              "Service": "philoberry-nginx"
            },
            "tags_all": {
              "Name": "nginx-tg",
              "Service": "philoberry-nginx"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-012a207d27f6adbad",
            "description": "Security group for EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012a207d27f6adbad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-0737e7b46fd3d1f26",
            "description": "philoberry rds-db security group production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0737e7b46fd3d1f26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "philoberry_rds_ingress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f46c55466627956"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "temporary_rds_ingress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b34fb82fd445c2cd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "philoberry-rds-db-sg-dev",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "philoberry-rds-db-sg-dev",
              "Service": "philoberry-rds-db-dev"
            },
            "tags_all": {
              "Name": "philoberry-rds-db-sg-dev",
              "Service": "philoberry-rds-db-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.ec2.aws_security_group.ec2_sg",
            "module.ecs-cluster.aws_security_group.backend_task",
            "module.ecs-cluster.aws_security_group.frontend_task",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f7f9c20c6d38253",
            "association_id": "eipassoc-049982d3f0d61040e",
            "domain": "vpc",
            "id": "eipalloc-00f7f9c20c6d38253",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-09a1e625727a1a27b",
            "private_dns": "ip-172-18-2-53.ap-northeast-2.compute.internal",
            "private_ip": "172.18.2.53",
            "public_dns": "ec2-3-36-199-239.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.199.239",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f0a84cd53e011fe",
            "association_id": "eipassoc-00df8ad84154e394e",
            "domain": "vpc",
            "id": "eipalloc-06f0a84cd53e011fe",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0614bbac6a336ce3c",
            "private_dns": "ip-172-18-3-78.ap-northeast-2.compute.internal",
            "private_ip": "172.18.3.78",
            "public_dns": "ec2-43-203-2-84.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.2.84",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cluster_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:internet-gateway/igw-0521c09fecbc917ba",
            "id": "igw-0521c09fecbc917ba",
            "owner_id": "666897452748",
            "tags": {
              "Name": "ecs-igw-dev"
            },
            "tags_all": {
              "Name": "ecs-igw-dev"
            },
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f7f9c20c6d38253",
            "association_id": "eipassoc-049982d3f0d61040e",
            "connectivity_type": "public",
            "id": "nat-03b2279c38de808c8",
            "network_interface_id": "eni-09a1e625727a1a27b",
            "private_ip": "172.18.2.53",
            "public_ip": "3.36.199.239",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d3c7d7c2d50b5b2",
            "tags": {
              "Name": "NAT gw dev"
            },
            "tags_all": {
              "Name": "NAT gw dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f0a84cd53e011fe",
            "association_id": "eipassoc-00df8ad84154e394e",
            "connectivity_type": "public",
            "id": "nat-090739bb94cb689e0",
            "network_interface_id": "eni-0614bbac6a336ce3c",
            "private_ip": "172.18.3.78",
            "public_ip": "43.203.2.84",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-039e095c4601cffe8",
            "tags": {
              "Name": "NAT gw dev"
            },
            "tags_all": {
              "Name": "NAT gw dev"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0521c09fecbc917ba",
            "id": "r-rtb-0d19024edde0730a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d19024edde0730a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:route-table/rtb-05d346dcd3fee26db",
            "id": "rtb-05d346dcd3fee26db",
            "owner_id": "666897452748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03b2279c38de808c8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-dev"
            },
            "tags_all": {
              "Name": "private-route-table-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:route-table/rtb-0e823fa8b22f2229c",
            "id": "rtb-0e823fa8b22f2229c",
            "owner_id": "666897452748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-090739bb94cb689e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-dev"
            },
            "tags_all": {
              "Name": "private-route-table-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:route-table/rtb-0a97272ab9b68a0a6",
            "id": "rtb-0a97272ab9b68a0a6",
            "owner_id": "666897452748",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0521c09fecbc917ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-route-table-dev"
            },
            "tags_all": {
              "Name": "ecs-route-table-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e222689bbb429ba3",
            "route_table_id": "rtb-05d346dcd3fee26db",
            "subnet_id": "subnet-0ad1fb01354287e32"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035de622f59adcc3d",
            "route_table_id": "rtb-0e823fa8b22f2229c",
            "subnet_id": "subnet-08db90a99bc49e076"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "to-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e08aba842d39c04",
            "route_table_id": "rtb-0a97272ab9b68a0a6",
            "subnet_id": "subnet-05d3c7d7c2d50b5b2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7002a8c2c1e26ef",
            "route_table_id": "rtb-0a97272ab9b68a0a6",
            "subnet_id": "subnet-039e095c4601cffe8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_route_table.public_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:security-group/sg-0d180286d41866a45",
            "description": "Allow inbound traffic on port 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d180286d41866a45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "endpoint_sg",
            "name_prefix": "",
            "owner_id": "666897452748",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "endpoint_sg"
            },
            "tags_all": {
              "Name": "endpoint_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:subnet/subnet-0ad1fb01354287e32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.18.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad1fb01354287e32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666897452748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-private-subnet-dev"
            },
            "tags_all": {
              "Name": "ecs-private-subnet-dev"
            },
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:subnet/subnet-08db90a99bc49e076",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08db90a99bc49e076",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "666897452748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-private-subnet-dev"
            },
            "tags_all": {
              "Name": "ecs-private-subnet-dev"
            },
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:subnet/subnet-05d3c7d7c2d50b5b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.18.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d3c7d7c2d50b5b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666897452748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-public-subnet-dev"
            },
            "tags_all": {
              "Name": "ecs-public-subnet-dev"
            },
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:subnet/subnet-039e095c4601cffe8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.18.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039e095c4601cffe8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "666897452748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-public-subnet-dev"
            },
            "tags_all": {
              "Name": "ecs-public-subnet-dev"
            },
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:vpc/vpc-056c1af0371e5c654",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-0f1d902325a9f01a5",
            "default_route_table_id": "rtb-0d19024edde0730a6",
            "default_security_group_id": "sg-007212c75c0670b12",
            "dhcp_options_id": "dopt-08bf3d10fa52df507",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056c1af0371e5c654",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d19024edde0730a6",
            "owner_id": "666897452748",
            "tags": {
              "Name": "philoberry-cluster_vpc-dev",
              "Service": "philoberry-{var.service_type}"
            },
            "tags_all": {
              "Name": "philoberry-cluster_vpc-dev",
              "Service": "philoberry-{var.service_type}"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:vpc-endpoint/vpce-032555bec2723e657",
            "dns_entry": [
              {
                "dns_name": "vpce-032555bec2723e657-rhuq8uw8.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-032555bec2723e657-rhuq8uw8-ap-northeast-2b.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-032555bec2723e657-rhuq8uw8-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0639914244RK44LHNH1E"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-032555bec2723e657",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03effa609a2e9bfbe",
              "eni-0df99e93d7f2bcb35"
            ],
            "owner_id": "666897452748",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d180286d41866a45"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-08db90a99bc49e076",
              "subnet-0ad1fb01354287e32"
            ],
            "tags": {
              "Name": "ecr_api_endpoint"
            },
            "tags_all": {
              "Name": "ecr_api_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_security_group.endpoint_sg",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:vpc-endpoint/vpce-0e7a1416c82031e6a",
            "dns_entry": [
              {
                "dns_name": "vpce-0e7a1416c82031e6a-5xz3x2ay.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e7a1416c82031e6a-5xz3x2ay-ap-northeast-2b.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e7a1416c82031e6a-5xz3x2ay-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z06464792N944J5IIX2V6"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z06464792N944J5IIX2V6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e7a1416c82031e6a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-057371958a9fcd8d8",
              "eni-0fbdcd788ae3d1afe"
            ],
            "owner_id": "666897452748",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d180286d41866a45"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-08db90a99bc49e076",
              "subnet-0ad1fb01354287e32"
            ],
            "tags": {
              "Name": "ecr_dkr_endpoint"
            },
            "tags_all": {
              "Name": "ecr_dkr_endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_security_group.endpoint_sg",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:666897452748:vpc-endpoint/vpce-06a12c7404a7e4c11",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-06a12c7404a7e4c11",
            "owner_id": "666897452748",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05d346dcd3fee26db",
              "rtb-0e823fa8b22f2229c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "tags": {
              "Name": "s3_endpoint"
            },
            "tags_all": {
              "Name": "s3_endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-056c1af0371e5c654"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.cluster_igw",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cluster_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}